--- a/style.css
+++ b/style.css
@@ -1,8 +1,89 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{margin: 0; padding: 0;}
+*{margin: 0; padding: 0; font-family: poppins;}
 
 .container{
     width: 1160px;
     margin: 0 auto;
 }
+
+/* --------------
+   Header start
+--------------- */
+
+
+#header{
+    background-color:  #2D25A0;
+    color: white;
+}
+
+/*-----------------------
+ Navigation bar start
+----------------------- */
+
+.navBar{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 42px;
+
+    height: 44px;
+
+}
+
+.menuItem{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    width: 587px;
+    height: 24px;
+}
+
+.login{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    width: 123px;
+    background-color: #E02C6D;
+}
+
+/*----------------------
+Navigation bar end
+--------------------- */
+
+/* --------------
+ Head info start
+ -------------- */
+
+ .headInfo{
+     display: flex;
+     justify-content: space-between;
+     padding: 60px 0px;
+ }
+
+ .title{
+     width: 475px;
+     height: 230px;
+     line-height: 80px;
+ }
+
+ .title h1{
+     font-size: 64px;
+     font-weight: 700;
+ }
+
+ .banner{
+     width: 456px;
+ }
+
+ .banner img{
+     width: 100%;
+ }
+
+
+ /* --------------
+  Head info end
+  -------------- */
+
+/* ------------
+    Header end
+--------------- */
