--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .head-container{
     width: 1160px;
-    margin: 0 auto;
+    margin: 0px auto;
 }
 
 .container{
@@ -32,8 +32,8 @@ p{
 .navBar{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-top: 42px;
-
     height: 44px;
 
 }
@@ -46,12 +46,15 @@ p{
     height: 24px;
 }
 
-.login{
-    display: flex;
-    justify-content:space-evenly;
-    align-items: center;
-    width: 123px;
+.button{
+    padding: 10px 24px;
+    color: white;
     background-color: #E02C6D;
+    border: none;
+}
+
+.button i{
+    margin: 0 8px;
 }
 
 /*----------------------
@@ -85,6 +88,11 @@ Navigation bar end
 
  .banner img{
      width: 100%;
+     transition: 2s;
+ }
+
+ #header:hover .banner img{
+     transform: scale(1.3);
  }
 
 
@@ -134,17 +142,26 @@ Navigation bar end
 
 .highlightInfo{
     display: flex;
+    justify-content: space-between;
 
 }
 
-.highlightInfo div{
+.highlight{
+    width: 469px;
+}
+
+.highlightImage{
     width: 50%;
 }
-
 .highlight h2{
     font-size: 48px;
     line-height: 60px;
-    margin-top: 50px;
+    margin: 50px 0px 8px 0px ;
+}
+
+.highlight p{
+    margin-bottom: 24px;
+    width: 400px;
 }
 
 .highlightImage img{
@@ -155,6 +172,65 @@ Navigation bar end
   /* -------------------
     Highlights section end
     -------------------- */
+
+
+/* ---------------------
+   gallery section start
+------------------------ */
+
+.galleryHeading{
+    color: rgb(39, 30, 51);
+    font-size: 45px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+/* .photoGallery{
+    background-color: cornflowerblue;
+} */
+.photos{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+}
+
+.photo{
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 0 10px rgb(128, 128, 128);
+}
+
+.photos img{
+    width: 100%;
+    height: 200px;
+
+}
+/* ---------------------
+   gallery section end
+------------------------ */
+
+/* ------------------------
+ best player section start
+ ------------------------ */
+
+ .bPlayers{
+     display: flex;
+     justify-content: space-between;
+ }
+
+ .bPlayers div{
+     box-shadow: 0 0 10px rgb(175, 175, 175);
+     border-radius: 5px;
+     padding: 10px;
+ }
+
+ .bPlayers img{
+     width: 300px;
+     height: 200px;
+ }
+/* ------------------------
+ best player section start
+ ------------------------ */
 
 /* ===================
    footer section start
@@ -171,6 +247,7 @@ Navigation bar end
 }
 .footer img{
     width: 100%;
+    height: 110px;
 }
 
 .icons ul{
@@ -178,7 +255,7 @@ Navigation bar end
     list-style: none;
     width: 170px;
     justify-content: space-between;
-    margin: 0 auto 20px;
+    margin: 20px auto;
 
 }
 
@@ -195,8 +272,9 @@ Navigation bar end
 
 .footer span{
     display: block;
-    width: 210px;
+    width: 235px;
     margin: 0 auto;
+    font-size: 18px;
 }
 
 /* ===================
