--- a/style.css
+++ b/style.css
@@ -337,6 +337,9 @@ Navigation bar end
     .title{
         margin-bottom: 150px;
     }
+    .title h1{
+        margin-bottom: 15px;
+    }
 
     .photos{
         display: flex;
